[gd_scene load_steps=4 format=3 uid="uid://ddie1k5kmydk1"]

[ext_resource type="Theme" uid="uid://dq00fxbljcbmj" path="res://assets/themes/default_theme.tres" id="1_24lsf"]
[ext_resource type="Script" uid="uid://clnxa60ejoq5d" path="res://scenes/ui/menus/multiplayer_menu.gd" id="2_yqp5i"]
[ext_resource type="PackedScene" uid="uid://dtf6um030ncwb" path="res://scripts/managers/default_game_manager.tscn" id="3_38r0u"]

[node name="MultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_24lsf")
script = ExtResource("2_yqp5i")
manager_scene = ExtResource("3_38r0u")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0117647, 0.14902, 0.34902, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "< Back"

[node name="ButtonsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6

[node name="HostGame" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
text = "Host Game
"

[node name="JoinAsPlayer2" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Join as Player 2"

[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/HostGame" to="." method="_on_host_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/JoinAsPlayer2" to="." method="_on_join_as_player_2_pressed"]
